Support overriding most Azure and EC2 cloud parameters via Java system properties.
[Feature][Toolbox]